--- a/main/bin/index.html
+++ b/main/bin/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	
-	<script src="js/swfobject.js" type="text/javascript"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 	<script type="text/javascript">
 		var flashvars = {
 		};
@@ -21,7 +21,7 @@
 		var attributes = {
 			id:"main"
 		};
-		swfobject.embedSWF("main.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+		swfobject.embedSWF("main.swf", "altContent", "760", "730", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
 	</script>
 	<style type="text/css">
 		html, body { height:100%; overflow:hidden; }
